Revert back to original after experimentation.

--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@
 #parallax-world-of-ugg h1 {font-family:'Oswald', sans-serif; font-size:70px; font-weight:400; text-transform: uppercase; color:black; padding:0; margin:0;}
 #parallax-world-of-ugg h2 {font-family:'Oswald', sans-serif; font-size:35px; letter-spacing:10px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10;}
 #parallax-world-of-ugg h3 {font-family:'Oswald', sans-serif; font-size:50px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; text-align: center;}
-#parallax-world-of-ugg h4 {font-family:'Oswald', sans-serif; font-size:35px; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; }
-#parallax-world-of-ugg h5 {font-family:'Oswald', sans-serif; font-size:70px; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; }
+#parallax-world-of-ugg h4 {font-family:'Oswald', sans-serif; font-size:35px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; }
+#parallax-world-of-ugg h5 {font-family:'Oswald', sans-serif; font-size:70px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; padding: 0;}
 #parallax-world-of-ugg h6 {font-family:'Oswald', sans-serif; font-size:23px; letter-spacing:10px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10;}
 #parallax-world-of-ugg p {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:20px; line-height:30px;}
 .first-character {font-weight:400; float: left; font-size: 84px; line-height: 64px; padding-top: 4px; padding-right: 8px; padding-left: 3px; font-family: 'Source Sans Pro', sans-serif;}
