--- a/style2.css
+++ b/style2.css
@@ -13,7 +13,7 @@
 .margin-top-10 {padding-top:10px;}
 .margin-bot-10 {padding-bottom:10px;}
 
-.parallax-world-of-ugg {
+.mobile-in-case {
     max-width: 599px;
     margin: auto;}
 
