--- a/style2.css
+++ b/style2.css
@@ -15,7 +15,7 @@
 
 .mobile-in-case {
     max-width: 599px;
-    margin: auto;}
+    margin: 0 auto;}
 
 /* Typography */
 /**************************/
