--- a/style2.css
+++ b/style2.css
@@ -2,7 +2,6 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
 
 
-
 /* Override UGG site */
 #main {width: 100%; padding:0;}
 .content-asset p {margin:0 auto;}
@@ -13,7 +12,7 @@
 .margin-top-10 {padding-top:10px;}
 .margin-bot-10 {padding-bottom:10px;}
 
-.mobile-in-case {
+body {
     max-width: 599px;
     margin: 0 auto;}
 
