--- a/style2.css
+++ b/style2.css
@@ -13,7 +13,7 @@
 .margin-bot-10 {padding-bottom:10px;}
 
 body {
-    max-width: 599px;
+    width: 599px;
     margin: 0 auto;}
 
 /* Typography */
