--- a/style2.css
+++ b/style2.css
@@ -12,7 +12,7 @@
 .margin-top-10 {padding-top:10px;}
 .margin-bot-10 {padding-bottom:10px;}
 
-body {
+.mobileincase {
     width: 599px;
     margin: 0 auto;}
 
