--- a/style2.css
+++ b/style2.css
@@ -2,6 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
 
 
+
 /* Override UGG site */
 #main {width: 100%; padding:0;}
 .content-asset p {margin:0 auto;}
@@ -12,15 +13,14 @@
 .margin-top-10 {padding-top:10px;}
 .margin-bot-10 {padding-bottom:10px;}
 
-
 /* Typography */
 /**************************/
 #parallax-world-of-ugg h1 {font-family:'Oswald', sans-serif; font-size:70px; font-weight:400; text-transform: uppercase; color:black; padding:0; margin:0;}
-#parallax-world-of-ugg h2 {font-family:'Oswald', sans-serif; font-size:35px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10;}
+#parallax-world-of-ugg h2 {font-family:'Oswald', sans-serif; font-size:35px; letter-spacing:10px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10;}
 #parallax-world-of-ugg h3 {font-family:'Oswald', sans-serif; font-size:50px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; text-align: center;}
-#parallax-world-of-ugg h4 {font-family:'Oswald', sans-serif; font-size:35px; font-weight:400; text-transform: uppercase; color:black; }
-#parallax-world-of-ugg h5 {font-family:'Oswald', sans-serif; font-size:70px; font-weight:400; text-transform: uppercase; color:black; }
-#parallax-world-of-ugg h6 {font-family:'Oswald', sans-serif; font-size:23px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10;}
+#parallax-world-of-ugg h4 {font-family:'Oswald', sans-serif; font-size:35px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; }
+#parallax-world-of-ugg h5 {font-family:'Oswald', sans-serif; font-size:70px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; padding: 0px; }
+#parallax-world-of-ugg h6 {font-family:'Oswald', sans-serif; font-size:23px; letter-spacing:10px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10;}
 #parallax-world-of-ugg p {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:20px; line-height:30px;}
 .first-character {font-weight:400; float: left; font-size: 84px; line-height: 64px; padding-top: 4px; padding-right: 8px; padding-left: 3px; font-family: 'Source Sans Pro', sans-serif;}
 
@@ -34,7 +34,7 @@ hr.solid {
   border-top: 20px solid saddlebrown;
 }
 
-.two {font-family:'Oswald', sans-serif; font-size:23px; line-height:1.3; font-weight:400; text-transform: uppercase; color:white; text-align: center; margin: auto;  width: 100%; display:block; text-decoration:underline; text-decoration-color: sandybrown;}
+.two {font-family:'Oswald', sans-serif; font-size:23px; line-height:1.3; font-weight:400; letter-spacing:7px; text-transform: uppercase; color:white; text-align: center; margin: auto;  width: 100%; display:block; text-decoration:underline; text-decoration-color: sandybrown;}
 
 .creditsfinal {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:15px; line-height:30px; text-align:center;color:white;}
 .middle {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:20px; line-height:30px; text-align:left;color:black;}
@@ -48,7 +48,7 @@ hr.solid {
 /* Section - Title */
 /**************************/
 #parallax-world-of-ugg .title {background: white; padding: 60px; margin:0 auto; text-align:center;}
-#parallax-world-of-ugg .title h1 {font-size:35px;}
+#parallax-world-of-ugg .title h1 {font-size:35px; letter-spacing:8px;}
 
 /* Section - Block */
 /**************************/
@@ -58,10 +58,10 @@ hr.solid {
 
 /* Section - Parallax */
 /**************************/
-#parallax-world-of-ugg .parallax-one {padding-top: 100px; padding-bottom: 100px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg1.jpeg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: top center;background-color:black;}
-#parallax-world-of-ugg .parallax-two {padding-top: 100px; padding-bottom: 100px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg2.jpg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
-#parallax-world-of-ugg .parallax-three {padding-top: 100px; padding-bottom: 100px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg3.jpg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
-#parallax-world-of-ugg .parallax-four {padding-top: 100px; padding-bottom: 100px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg4.jpg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
+#parallax-world-of-ugg .parallax-one {padding-top: 100px; padding-bottom: 100px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg1.jpeg); background-position: center center;}
+#parallax-world-of-ugg .parallax-two {padding-top: 100px; padding-bottom: 100px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg2.jpg); background-position: center center;}
+#parallax-world-of-ugg .parallax-three {padding-top: 100px; padding-bottom: 100px; overflow: hidden; position: absolute; width: 100%; background-image: url(parallaxbg3.jpg); background-position: center center;}
+#parallax-world-of-ugg .parallax-four {padding-top: 100px; padding-bottom: 100px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg4.jpg);  background-position: center center;}
 
 /* Extras */
 /**************************/
