--- a/style2.css
+++ b/style2.css
@@ -1,8 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald:300,400,700);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
 
-
-
 /* Override UGG site */
 #main {width: 100%; padding:0;}
 .content-asset p {margin:0 auto;}
@@ -15,54 +13,52 @@
 
 /* Typography */
 /**************************/
-#parallax-world-of-ugg h1 {font-family:'Oswald', sans-serif; font-size:70px; font-weight:400; text-transform: uppercase; color:black; padding:0; margin:0;}
-#parallax-world-of-ugg h2 {font-family:'Oswald', sans-serif; font-size:35px; letter-spacing:10px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10;}
-#parallax-world-of-ugg h3 {font-family:'Oswald', sans-serif; font-size:50px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; text-align: center;}
-#parallax-world-of-ugg h4 {font-family:'Oswald', sans-serif; font-size:35px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; }
-#parallax-world-of-ugg h5 {font-family:'Oswald', sans-serif; font-size:70px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; padding: 0px; }
-#parallax-world-of-ugg h6 {font-family:'Oswald', sans-serif; font-size:23px; letter-spacing:10px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10;}
-#parallax-world-of-ugg p {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:20px; line-height:30px;}
+#parallax-world-of-ugg h1 {font-family:'Oswald', sans-serif; font-size:24px; font-weight:400; text-transform: uppercase; color:black; padding:0; margin:0;}
+#parallax-world-of-ugg h2 {font-family:'Oswald', sans-serif; font-size:70px; letter-spacing:10px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10; opacity:.9;}
+#parallax-world-of-ugg h3 {font-family:'Oswald', sans-serif; font-size:14px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black;}
+#parallax-world-of-ugg p {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:14px; line-height:24px;}
 .first-character {font-weight:400; float: left; font-size: 84px; line-height: 64px; padding-top: 4px; padding-right: 8px; padding-left: 3px; font-family: 'Source Sans Pro', sans-serif;}
-
-a {font-family:'Oswald', sans-serif; font-size:30px; line-height:1.3; font-weight:400; letter-spacing:3px; text-transform: uppercase; color:black; text-align: center; margin: auto;  width: 100%; display:block; text-decoration:underline; text-decoration-color: sandybrown; }
-
-a:hover {
-    text-decoration-color: goldenrod;
-}
-
-hr.solid {
-  border-top: 20px solid saddlebrown;
-}
-
-.two {font-family:'Oswald', sans-serif; font-size:23px; line-height:1.3; font-weight:400; letter-spacing:7px; text-transform: uppercase; color:white; text-align: center; margin: auto;  width: 100%; display:block; text-decoration:underline; text-decoration-color: sandybrown;}
-
-.creditsfinal {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:15px; line-height:30px; text-align:center;color:white;}
-.middle {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:20px; line-height:30px; text-align:left;color:black;}
-.middlea {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:20px; line-height:30px; text-align:center;color:black;}
-.credits {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:8px; line-height:30px; text-align:left;}
 
 .sc {color: #3b8595;}
 .ny {color: #3d3c3a;}
 .atw {color: #c48660;}
 
+/* Section - Title */
+/**************************/
+#parallax-world-of-ugg .title {background: white; padding: 60px; margin:0 auto; text-align:center;}
+#parallax-world-of-ugg .title h1 {font-size:35px; letter-spacing:8px;}
 
+/* Section - Block */
+/**************************/
+#parallax-world-of-ugg .block {background: white; padding: 60px; width:820px; margin:0 auto; text-align:justify;}
+#parallax-world-of-ugg .block-gray {background: #f2f2f2;padding: 60px;}
+#parallax-world-of-ugg .section-overlay-mask {position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: black; opacity: 0.70;}
 
 /* Section - Parallax */
 /**************************/
-#parallax-world-of-ugg .parallax-one {padding-top: 100px; padding-bottom: 100px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg1.jpeg); background-position: center center;}
-#parallax-world-of-ugg .parallax-two {padding-top: 100px; padding-bottom: 100px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg2.jpg); background-position: center center;}
-#parallax-world-of-ugg .parallax-three {padding-top: 100px; padding-bottom: 100px; overflow: hidden; position: absolute; width: 100%; background-image: url(parallaxbg3.jpg); background-position: center center;}
-#parallax-world-of-ugg .parallax-four {padding-top: 100px; padding-bottom: 100px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg4.jpg);  background-position: center center;}
+#parallax-world-of-ugg .parallax-one {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg1.jpeg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: top center;}
+#parallax-world-of-ugg .parallax-two {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg2.jpg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
+#parallax-world-of-ugg .parallax-three {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg3.jpg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
+#parallax-world-of-ugg .parallax-four {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg4.jpg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
 
 /* Extras */
 /**************************/
-#parallax-world-of-ugg .line-break {border-bottom:1px solid black; width: 300px; margin:0 auto;}
+#parallax-world-of-ugg .line-break {border-bottom:1px solid black; width: 150px; margin:0 auto;}
 
 /* Media Queries */
 /**************************/
-
-
-
+@media screen and (max-width: 959px) and (min-width: 768px) {
+  #parallax-world-of-ugg .block {padding: 40px; width:620px;}
+}
+@media screen and (max-width: 767px) {
+  #parallax-world-of-ugg .block {padding: 30px; width:420px;}
+  #parallax-world-of-ugg h2 {font-size:30px;}
+  #parallax-world-of-ugg .block {padding: 30px;}
+  #parallax-world-of-ugg .parallax-one, #parallax-world-of-ugg .parallax-two, #parallax-world-of-ugg .parallax-three {padding-top:100px; padding-bottom:100px;}
+}
+@media screen and (max-width: 479px) {
+  #parallax-world-of-ugg .block {padding: 30px 15px; width:290px;}
+}
 footer {
     background-color:rgb(35,25,20);
     text-align:center;
@@ -78,7 +74,7 @@ footer {
   border: none;
   text-align: left;
   outline: none;
-  font-size: 20px;
+  font-size: 40px;
   transition: 0.4s;
 }
 
@@ -87,15 +83,16 @@ footer {
 }
 
 .panel {
-  padding: 0 18px;
+  padding: 20px 18px;
   display: none;
   background-color: white;
   overflow: hidden;
+  font-size: 12px;
 }
 
 .accordion:after {
   content: '\02795'; /* Unicode character for "plus" sign (+) */
-  font-size: 13px;
+  font-size: 40px;
   color: #777;
   float: right;
   margin-left: 5px;
@@ -106,7 +103,7 @@ footer {
 }
 
 li {
-    font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:20px; line-height:30px;
+    font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:12px; line-height:30px; padding-bottom:3px;
 }
 
 bold {
@@ -121,3 +118,12 @@ img {
 .image {
     text-align: center;
 }
+
+#parallax-world-of-ugg h4 {font-family:'Oswald', sans-serif; font-size:14px; line-height:0; letter-spacing:10px; font-weight:400; text-transform: uppercase; color:black; text-align: center;}
+a {font-family:'Oswald', sans-serif; font-size:14px; line-height:1.3; font-weight:400; letter-spacing:3px; color:black; text-align: center; margin: auto;  width: 100%; display:block; text-decoration:underline; text-decoration-color: sandybrown; }
+a:hover {text-decoration-color: goldenrod;}
+
+.creditsfinal {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:15px; line-height:30px; text-align:center;color:white;}
+.middle {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:14px; line-height:30px; text-align:left;color:black;}
+.middlea {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:14px; line-height:30px; text-align:center;color:black;}
+.credits {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:8px; line-height:30px; text-align:left;}
