--- a/style2.css
+++ b/style2.css
@@ -1,11 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald:300,400,700);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
 
-@media screen and (min-width: 769px) {
 #content-desktop {display: block;}
-  #content-mobile {display: none;}}
+#content-mobile {display: none;}
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
 
 #content-desktop {display: none;}
 #content-mobile {display: block;}
