--- a/style.css
+++ b/style.css
@@ -164,3 +164,5 @@ img {
 .image {
     text-align: center;
 }
+
+tanahhock {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:14px; line-height:24px; text-decoration: underline;}
